fixed the some styles . minHight of containters in drawer removed . explicitly declared the style textAlign in titles..

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,3 +18,8 @@ body,
     hover:opacity-100 hover:text-teal-600;
   font-size: 0.9em;
 }
+
+/* #my-content-script{
+text-align: left !important;
+
+} */
